--- a/examples/index.html
+++ b/examples/index.html
@@ -38,6 +38,8 @@
         <br/>
         Pattern spacing : 20 <input type="range" min="20" max="200" step="10" name="patternSpacing" value="50"/> 200
         <br>
+        Pattern scale : 0.1 <input type="range" min="0.1" max="10" step="0.1" name="patternScale" value="1"/> 10
+        <br>
         <label>
             <input type="checkbox" name="reverseAngle"/> reverseAngle
         </label>
@@ -47,6 +49,7 @@
             pencil.on("end",function() {
                 
                 new JSYG(this).weatherFront({
+                    patternScale: new JSYG("[name=patternScale]").val(),
                     patternSpacing: new JSYG("[name=patternSpacing]").val(),
                     type : new JSYG("[name=typefront]:checked").val(),
                     inverseAngle : !!new JSYG("[name=reverseAngle]:checked").length
